--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                         Arrastra aquí para reproducir ...
                     </span>
                 </div>
+                <div class="player hidden">
+                    <iframe width="100%"
+                        height="166"
+                        scrolling="no"
+                        frameborder="no"
+                        allow="autoplay"
+                        src="">
+                    </iframe>
+                </div>
             </article>
         </section>
 
