--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 
         <section>
             <article>
-                <h3 class="color-electricblue">Busca tu canción...</h3>
-
                 <div class="form">
-                    <form name="search-form" id="search-form">
-                        <input type="text" name="search" id="search">
+                    <div class="form-group">
+                        <h3 class="color-electricblue form-title">Busca tu canción...</h3>
 
-                        <input type="submit" class="btn left-side-btn" id="search-button" value="Buscar">
-                    </form>
+                        <form name="search-form" id="search-form">
+                            <input type="text" name="search" id="search">
+
+                            <input type="submit" class="btn left-side-btn" id="search-button" value="Buscar">
+                        </form>
+                    </div>
                 </div>
 
                 <!--/ Search results (start dragging) /-->
